2010-08-13 Chris Morley
	
	* tools/obabel.cpp: by its design obabel cannot use multiple
	concatenated single-character options. Ensure single ones with
	an unregistered number of parameters work correctly.
	
	* src/formats/fastsearchformat.cpp: extra error handling

2010-08-13 Chris Morley

	* src/formats/inchiformat.cpp(ReadMolecule):Use GetStructFromINCHI
	and not GetStructFromStdINCHI so can read both standard and
	non-standard InChIs. Make error handling more robust.

2010-08-13 Noel O'Boyle

	* src/mol.cpp: HasHydrogens() never returned True as the flag was
	being cleared in AddHydrogens(). Reported by Alex Henderson on 
	openbabel-devel. Now fixed.

2010-08-13 Noel O'Boyle
	
	* src/forcefield.cpp: Fixed a problem with invalid pointers in
	WeightedRotorSearch that was resulting in weird geometries. I think I
	introduced this problem back in May. Also noticed that the final
	conformer returned had an off-by-one error. I think I also introduced
	this problem at the same time.

2010-08-12 Chris Morley

	* src/ops/opisomorph.cpp: make more robust to errors like a missing
	file.
	
	* src/descriptor.cpp: allow descripor parameters to be in quotes.
	
	* src/formats/mdlformat.cpp: change the new -at option to -aT
	because	FastSearchFormat already uses -at.
	
	* src/ops/xout.cpp, src/GUI/OBGUI.cpp: change the name of the op
	xout to 0xout so that it is executed before other ops.
	
	* src/GUI/optswx.cpp(SetOptions): ignore entries with both
	checkbox and editboxes unless checked.

2010-08-12 Noel O'Boyle

	* src/stereo/perception.cpp: CisTransFrom3D was not able to handle
	deviations from ideal angles. Replaced existing method with one based
	on the signed distance to the plane through the double bond at right
	angles to the stereo unit.
	* src/math/vector3.cpp, vector3.h: Move body of Point2Plane into new
	function Point2PlaneSigned. Point2Plane now just returns
	fabs(Point2PlaneSigned).

2010-08-09 Chris Morley
